--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body{
 .Header-container{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     background: rgba(229, 84, 115, 0.10);
 }
 
@@ -75,7 +76,7 @@ body{
 }
 
 .header-img{
-    margin-right: 180px;
+    right: 180px;
     margin-top: 20px;
     position: relative;
     bottom: -5px;
